--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   "autoload": {
     "psr-4": {
       "PhpFramework\\": "framework/",
-      "App\\": "app/"
+      "App\\": "app/",
+      "Tests\\": "tests/"
     }
   },
   "authors": [
@@ -14,5 +15,8 @@
       "email": "thibsix@outlook.be"
     }
   ],
-  "require": {}
+  "require-dev": {
+    "phpunit/phpunit": "^9.5",
+    "guzzlehttp/guzzle": "^7.0"
+  }
 }
